# bloombility

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  cloud-cfg.txt  pyproject.toml  start_instance.py
.github/workflows/: flow.yml
assignments/centralized_CNN/: Networks.py  README.md  classification.py  config.yaml  default_config.yaml  download_femnist.py  main.py  regression.py  requirements.txt  simple_classification.py  simple_regression.py
assignments/uppmax_arch/: .gitignore  README.md  build_singularity.sh  kill_all_containers.sh  kill_docker_containers.sh  start_locally.sh  start_with_singularity.sh
bloom/: .gitignore  README.md  __init__.py  __main__.py  definitions.py
bloom/FL/: .gitignore  README.md  config-generator.sh  context.py  default.yaml  fl_experiments.out  main.py  ray_fed_learning.py  run_FL  run_FL_experiments_cifar10
bloom/alvis/: run-SL.sh  run_FL
bloom/central/: .gitignore  README.md  centralized.py  classification.py  context.py  default_config.yaml  main.py  regression.py  simple_classification.py  simple_regression.py
bloom/checkpoints/: README.md
bloom/config/: Config.py  FedConfig.py  default_config.yaml  default_config_FL.yaml
bloom/fedavg/: README.md  build_singularity.sh  kill_all_containers.sh  main.py  start_federated_learning.sh  start_locally.sh
bloom/load_data/: .gitignore  README.md  __init__.py  data_distributor.py  download_cifar10.py  download_femnist.py  dummy.py
bloom/models/: Networks.py  README.md  __init__.py
bloom/split/: .gitignore  gvs.py  (+7 more)
lit_research/: splitfed.md
(+116 files in other folders)
