[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bloom"]

[project]
name = "bloom"
version = "0.1"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["federated-learning", "split-learning"]
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "flwr[simulation]==1.5.0",
    "pyyaml==6.0.1",
    "tqdm==4.66.1",
    "pandas==2.1.1",
    "numpy==1.26.0",
    "matplotlib==3.8.0",
    "scikit-learn==1.3.1",
    "wandb==0.16.0",
    "ray[data,train,tune,serve]==2.6.3",
    "hydra-core==1.3.2"
]

[project.optional-dependencies]
dev = ["pre-commit==3.4.0"]
